feat: Enhance HomePage with community-created bots and SEO improvements
- Added functionality to fetch and display community-created bots on the HomePage.
- Introduced a new SEOHead component for better SEO management.
- Updated styles for the new bot sections and call-to-action areas.
- Implemented loading state while fetching bots.
- Added a call-to-action for users to create their own bots.

style: Refactor theme styles for improved layout and responsiveness

- Adjusted grid layouts for bot sections and hero sections.
- Improved styling for call-to-action sections and creator CTAs.
- Enhanced responsiveness for various screen sizes.

feat: Implement basic Stripe and user profile routes

- Created stub routes for Stripe payment processing.
- Added user profile routes with sample data for demonstration.

chore: Add configuration for linting and browser compatibility

- Introduced a .hintrc file for linting configuration.
- Updated browserslist for better compatibility.

feat: Implement creator bot management API

- Developed a new creator module for managing community bots.
- Added endpoints for creating, updating, deleting, and retrieving bots.
- Included sample bots for demonstration purposes.

feat: Set up a simple Express server for API development

- Created a basic Express server with health check and static file serving.
- Integrated environment variable management with dotenv.

test: Add a simple test server for development purposes

- Implemented a test server with basic health check functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#4A9EFF" />
+    <script>
+      // Consolidated theme color logic for all browsers
+      function updateThemeColor() {
+        var themeColor = '#4A9EFF';
+        if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+          themeColor = '#222222';
+        }
+        var metaThemeColor = document.querySelector('meta[name="theme-color"]');
+        if (!metaThemeColor) {
+          metaThemeColor = document.createElement('meta');
+          metaThemeColor.setAttribute('name', 'theme-color');
+          document.head.appendChild(metaThemeColor);
+        }
+        metaThemeColor.setAttribute('content', themeColor);
+      }
+      document.addEventListener('DOMContentLoaded', updateThemeColor);
+      // Optional: Listen for changes in color scheme
+      if (window.matchMedia) {
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateThemeColor);
+      }
+    </script>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Experience conversations with AI bots that have distinct personalities. From business strategy to relationship advice, find the perfect AI companion for your needs." />
