--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%234A9EFF;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%237B61FF;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='16' cy='16' r='15' fill='url(%23grad)' stroke='%23fff' stroke-width='1'/%3E%3Crect x='10' y='8' width='12' height='10' rx='2' fill='%23fff'/%3E%3Ccircle cx='13' cy='12' r='1.5' fill='%234A9EFF'/%3E%3Ccircle cx='19' cy='12' r='1.5' fill='%234A9EFF'/%3E%3Crect x='14' y='15' width='4' height='1' rx='0.5' fill='%234A9EFF'/%3E%3Ccircle cx='16' cy='6' r='1' fill='%23fff'/%3E%3Cline x1='16' y1='7' x2='16' y2='8' stroke='%23fff' stroke-width='1'/%3E%3C/svg%3E" />
     <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%234A9EFF;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%237B61FF;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='16' cy='16' r='15' fill='url(%23grad)' stroke='%23fff' stroke-width='1'/%3E%3Crect x='10' y='8' width='12' height='10' rx='2' fill='%23fff'/%3E%3Ccircle cx='13' cy='12' r='1.5' fill='%234A9EFF'/%3E%3Ccircle cx='19' cy='12' r='1.5' fill='%234A9EFF'/%3E%3Crect x='14' y='15' width='4' height='1' rx='0.5' fill='%234A9EFF'/%3E%3Ccircle cx='16' cy='6' r='1' fill='%23fff'/%3E%3Cline x1='16' y1='7' x2='16' y2='8' stroke='%23fff' stroke-width='1'/%3E%3C/svg%3E" />
     
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
     
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
