chore(seo): point structured data, sitemap, robots to themebotpark.com

--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,8 @@
       "@type": "Organization",
       "name": "ThemeBotPark",
       "description": "AI chatbots with unique personalities for business, relationships, tech support, and honest advice",
-      "url": "https://themebotpark.vercel.app",
-      "logo": "https://themebotpark.vercel.app/logo512.png",
+      "url": "https://themebotpark.com",
+      "logo": "https://themebotpark.com/logo512.png",
       "foundingDate": "2025",
       "founder": {
         "@type": "Person",
